[gd_scene load_steps=13 format=3 uid="uid://ujrl0r23bgjd"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_6liqm"]
[ext_resource type="PackedScene" uid="uid://xjci2p0oquym" path="res://Scenes/Stage.tscn" id="2_paj0h"]
[ext_resource type="PackedScene" uid="uid://c3y5mqbx51k1g" path="res://Scenes/BuildStage.tscn" id="3_15jqi"]
[ext_resource type="PackedScene" uid="uid://b3h4k8vu6qd6f" path="res://Scenes/Menu.tscn" id="3_xmxm3"]
[ext_resource type="PackedScene" uid="uid://fxmea856d6lt" path="res://Scenes/TransitionScreen.tscn" id="4_k3c3p"]
[ext_resource type="AudioStream" uid="uid://dehob6agso060" path="res://Assets/Sounds/t4-DesignedToClimb.ogg" id="5_hxank"]
[ext_resource type="PackedScene" uid="uid://bmooe1628vo1y" path="res://Inventory/InventoryDatabase.tscn" id="6_kel8g"]
[ext_resource type="AudioStream" uid="uid://dj35ajhfgu4ya" path="res://Assets/Sounds/smooth-cold-wind-looped-135538.mp3" id="7_jfqxr"]
[ext_resource type="AudioStream" uid="uid://dcd5y2bnrvo02" path="res://Assets/Sounds/t4-GombousCity.ogg" id="7_qm7o6"]

[sub_resource type="Animation" id="Animation_i2uau"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jukebox:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Jukebox:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6oky3"]
resource_name = "menu_fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jukebox:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -47.954]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Jukebox:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdco1"]
_data = {
"RESET": SubResource("Animation_i2uau"),
"menu_fade_out": SubResource("Animation_6oky3")
}

[node name="Main" type="Node"]
script = ExtResource("1_6liqm")
stage = ExtResource("2_paj0h")
build_stage = ExtResource("3_15jqi")
menu = ExtResource("3_xmxm3")

[node name="CurrentScene" type="Node" parent="."]

[node name="Menu" parent="CurrentScene" instance=ExtResource("3_xmxm3")]

[node name="TransitionScreen" parent="." instance=ExtResource("4_k3c3p")]

[node name="AudioAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qdco1")
}

[node name="Jukebox" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hxank")

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jfqxr")
bus = &"Music"

[node name="GameplayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qm7o6")
bus = &"Music"

[node name="InventoryDatabase" parent="." instance=ExtResource("6_kel8g")]

[node name="Death" type="AudioStreamPlayer" parent="."]

[connection signal="begin" from="CurrentScene/Menu" to="." method="_on_menu_begin"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]
